--- a/src/composer.json
+++ b/src/composer.json
@@ -2,6 +2,7 @@
     "minimum-stability": "stable",
     "require": {
         "laravel/framework" : "~5.0",
-        "voodoophp/handlebars" : "~2.0"
+        "voodoophp/handlebars" : "~2.0",
+        "gloudemans/shoppingcart": "~1.3"
     }
 }
