--- a/src/composer.json
+++ b/src/composer.json
@@ -3,6 +3,14 @@
     "require": {
         "laravel/framework" : "~5.0",
         "voodoophp/handlebars" : "~2.0",
-        "gloudemans/shoppingcart": "~1.3"
+        "gloudemans/shoppingcart" : "~1.3"
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\" : "laravel-master/app"
+        },
+        "classmap": [
+            "laravel-master/database"
+        ]
     }
 }
