--- a/src/composer.json
+++ b/src/composer.json
@@ -7,7 +7,8 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\" : "laravel-master/app"
+            "App\\" : "laravel-master/app",
+            "Purefix\\" : "purefix"
         },
         "classmap": [
             "laravel-master/database"
