added zoom.js but disabled...
Blank screen instead of zoomed-in image. Image seems like staying in
the right place thought. Should be something to do with “slick” plug-in.

--- a/public/bower.json
+++ b/public/bower.json
@@ -15,6 +15,7 @@
   ],
   "dependencies": {
     "bootstrap": "~3.3.5",
-    "slick-carousel": "~1.5.8"
+    "slick-carousel": "~1.5.8",
+    "zoom.js": "~0.0.1"
   }
 }
